fix spinner alignment

--- a/components/Loading/Loading.module.css
+++ b/components/Loading/Loading.module.css
@@ -3,7 +3,3 @@
   flex-direction: column;
   display: flex;
 }
-
-.root .loading-ring {
-  margin: auto;
-}
